Use ByteBuddyAgent instead of implementing own agent
-- Use ByteBuddyAgent.install() in test
-- Remove own hot-attach method
-- Get rid of dependency on agent JAR
-- Remove agent manifest (Maven JAR plugin config no longer needed)
-- Remove 'agentmain' and 'premain' methods

This is just a first step, others will follow.